--- a/components/jkzp8vehy-go/overlays/development/deployment-patch.yaml
+++ b/components/jkzp8vehy-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: jkzp8vehy-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-5b7314a0db.0jv5.p3.openshiftapps.com/rhtap/rhtap-qe:51c6a3f6fdbde1a6c52da9b18c9692debaa0f7f6@sha256:01f1c73be0cd402c2000d06e8edcec3c39b590d2cbb9a26652c2e759a562d7c7
+          name: container-image
